# raft-vs-zab

./: .gitignore  Cargo.toml  Makefile  README.md  benchmark_comparison.py  build.rs  pyproject.toml  verify_data.py
raft/: Cargo.toml  Dockerfile  README.md  config.toml  pyproject.toml  requirements.txt
raft/data/: raft_write_prob_25_fault_enabled_kill_prob_25_nodes_10_summary.csv  raft_write_prob_25_fault_enabled_kill_prob_25_nodes_10_timesteps.csv  raft_write_prob_25_fault_enabled_kill_prob_25_nodes_25_summary.csv  raft_write_prob_25_fault_enabled_kill_prob_25_nodes_25_timesteps.csv  raft_write_prob_25_fault_enabled_kill_prob_25_nodes_5_summary.csv  raft_write_prob_25_fault_enabled_kill_prob_25_nodes_5_timesteps.csv  raft_write_prob_25_fault_enabled_kill_prob_50_nodes_10_summary.csv  raft_write_prob_25_fault_enabled_kill_prob_50_nodes_10_timesteps.csv  raft_write_prob_25_fault_enabled_kill_prob_50_nodes_25_summary.csv  raft_write_prob_25_fault_enabled_kill_prob_50_nodes_25_timesteps.csv  raft_write_prob_25_fault_enabled_kill_prob_50_nodes_5_summary.csv  raft_write_prob_25_fault_enabled_kill_prob_50_nodes_5_timesteps.csv  raft_write_prob_25_fault_enabled_kill_prob_75_nodes_10_summary.csv  raft_write_prob_25_fault_enabled_kill_prob_75_nodes_10_timesteps.csv  raft_write_prob_25_fault_enabled_kill_prob_75_nodes_25_summary.csv  raft_write_prob_25_fault_enabled_kill_prob_75_nodes_25_timesteps.csv  raft_write_prob_25_fault_enabled_kill_prob_75_nodes_5_summary.csv  (+37 more)
raft/src/: client.py  (+13 more)
zab/: Cargo.toml  Dockerfile  README.md  config.toml  pyproject.toml  requirements.txt
(+80 files in other folders)
