[package]
name = "replicated-counter"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1"
futures = "0.3"
prost = "0.12"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/main.rs"
