[package]
name = "raft"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "2.0.1"
chrono = "0.4.42"
clap = { version = "4.5", features = ["derive"] }
prost = "0.13"
protobuf-build = { path = "../protobuf-build" }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
