[package]
name = "zab"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
prost = "0.13"
protobuf-build = { path = "../protobuf-build" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12"
